--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  json_annotation: ^4.8.1
+  equatable: ^2.0.5
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +51,8 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   mockito: ^5.4.0
   build_runner: ^2.4.4
+  json_serializable: ^6.7.0
+  freezed: ^2.3.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
