--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   json_annotation: ^4.8.1
   equatable: ^2.0.5
   freezed_annotation: ^2.2.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
